style: fix scrollbar for toc in chrome

--- a/wiki/public/scss/wiki.scss
+++ b/wiki/public/scss/wiki.scss
@@ -726,6 +726,10 @@ h6:hover .feather-link {
 	scrollbar-width: none;
 	height: 90vh;
 
+	&::-webkit-scrollbar {
+		display: none;
+	}
+
 	.list-unstyled {
 		top: 0;
 		border-left: 1px solid var(--border-color);
